<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_background_color"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/inner_toolbar"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:navigationIcon="@drawable/ic_arrow_back_screen"
            app:navigationIconTint="@android:color/black"
            app:title="Settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/provided_by"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/provider_description" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:contentDescription="@string/source_provider"
            android:src="@drawable/open_weather_logo" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/about">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/temperature"
            android:textColor="@android:color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_degreeC"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:tag="C"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_degreeF"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:text="@string/f" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/two"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/one">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/wind_speed"
            android:textColor="@android:color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_windSpeed_m_s"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:tag="C"
                android:text="@string/m_s" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_windSpeed_km_h"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:text="@string/km_h" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/three"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/two">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/pressure"
            android:textColor="@android:color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pressure_mmHg"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:tag="C"
                android:text="@string/mmhg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pressure_hPa"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:text="@string/hpa" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>