<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu_mainAct"
            style="@style/iconButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/ic_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings_mainAct"
            style="@style/iconButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_city_mainAct"
            style="@style/mainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Moscow" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date_mainAct"
            style="@style/mainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_city_mainAct"
            tools:text="28 october" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <ImageView
            android:id="@+id/img_weather_mainAct"
            android:layout_width="180dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@mipmap/cloud3x" />


        <ImageView
            android:id="@+id/ic_weather_condition_main"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_temp_mainAct"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/ic_sun" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_weather_condition_description_main"
            style="@style/mainTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/ic_weather_condition_main"
            app:layout_constraintEnd_toStartOf="@+id/img_weather_mainAct"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ic_weather_condition_main"
            app:layout_constraintTop_toTopOf="@+id/ic_weather_condition_main"
            tools:text="clear sky" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_temp_mainAct"
            style="@style/mainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMinTextSize="88sp"
            android:autoSizeTextType="uniform"
            android:includeFontPadding="false"
            android:textSize="98sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toStartOf="@+id/img_weather_mainAct"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="25\u00B0" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/tv_temp_mainAct"
            app:layout_constraintStart_toStartOf="@id/tv_temp_mainAct">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_minTemp_mainAct"
                    style="@style/mainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/min"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_minValue_mainAct"
                    style="@style/mainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    tools:text="19" />

            </LinearLayout>

            <LinearLayout
                style="@style/dividerStyle"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_avgTemp_mainAct"
                    style="@style/mainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/avg"
                    android:layout_gravity="center"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_avgValue_mainAct"
                    style="@style/mainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    tools:text="23" />

            </LinearLayout>

            <LinearLayout
                style="@style/dividerStyle"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_maxTemp_mainAct"
                    style="@style/mainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/max"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_maxValue_mainAct"
                    style="@style/mainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    tools:text="29" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintVertical_bias="0.25">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionIcon"
                    android:src="@drawable/ic_thermostat" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_pressure_mu_main"
                    style="@style/additionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="1,5 hPa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionIcon"
                    android:src="@drawable/ic_water_drop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_humidity_mu_main"
                    style="@style/additionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="96%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionIcon"
                    android:src="@drawable/ic_flag" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_wind_speed_mu_main"
                    style="@style/additionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="4 m/s" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.521">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionIcon"
                    android:src="@drawable/ic_sunrise" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_sunrise_time_main"
                    style="@style/additionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="06:40" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionIcon"
                    android:src="@drawable/ic_sunset" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_sunset_time_main"
                    style="@style/additionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="22:30" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        style="?attr/bottomSheetStyle"
        android:id="@+id/bottom_sheets_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:background="@drawable/bg_bottom_sheets_main"
        app:behavior_hideable="false"
        app:behavior_peekHeight="160dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_gravity="end">

        <LinearLayout
            android:id="@+id/bottom_sheets_container_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bottom_sheets_swiper_main"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourly_list_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:layout_marginBottom="8dp"
                tools:layout_height="80dp"/>

            <LinearLayout
                style="@style/dividerStyle"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"/>

            <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>



        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>